--- a/package.json
+++ b/package.json
@@ -9,9 +9,40 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
+    "@lottiefiles/react-lottie-player": "^3.5.3",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@tanstack/react-query": "^5.28.6",
+    "@tanstack/react-table": "^8.15.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
+    "firebase": "^10.9.0",
+    "firebase-admin": "^12.0.0",
+    "i18next": "^23.10.1",
+    "lucide-react": "^0.363.0",
+    "next": "14.1.4",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-day-picker": "^8.10.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
-    "next": "14.1.4"
+    "react-hook-form": "^7.51.3",
+    "recharts": "^2.12.3",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4",
+    "zod-i18n-map": "^2.27.0"
   },
   "devDependencies": {
     "typescript": "^5",
